$Id$

User-visible changes in version 0.9.1  (2010-0 -  ):
* added cfityk to Windows installer
* Unix only: fitting can be interrupted by the INT signal
* changed output of "info errors", see the manual for details
* many bugs fixed

User-visible changes in version 0.9.0  (2010-01-05):
* GUI: Data > Editor dialog was replaced with two dialogs: Data > Table
  and Data > Edit Transformations
* added Lua bindings (configure option --enable-lua)
* a syntax to execute output from external program: command ! program [args...]
* xyConvert (which requires wx 2.9) is built by default.
  Added flag --disable-xyconvert, which must be used with wx 2.8.
* parsing of info command was rewritten, but functionality is almost the same
* bug fixes

User-visible changes in version 0.8.9  (2009-08-20):
* manual was converted from DocBook to reStructuredText
* GUI: On Linux fitting was very slow, this was fixed. A new option
  `refresh-period` was added to control refreshing during fitting.
* define supports variable substitution with "define ... where ...", e.g. 
   define Foo(alpha) = alpha * eta * (eta / tanh(eta) - ln (2*sinh(eta))) \
   where eta = 2*pi/alpha * sin(theta/2), theta=x*pi/180
* added access to symmetric errors from scripts (e.g. $variable.error 
  or %func.height.error)
* category "Education" was added to fityk.desktop

User-visible changes in version 0.8.8  (2009-06-21):
* added two flags to the configure script: --with-xylib and --with-samples
  (xylib from the fityk tarball is not used by default now)

User-visible changes in version 0.8.7  (2009-06-10):
* fityk license was changed from GPLv2 to GPLv2+ (2 or at your option any later)
* all config files are stored in a single directory:
       Unix: ~/.fityk
    Windows: C:\Documents and Settings\username\Application Data\fityk
        Mac: ~/Library/Application Support/fityk
  This changes the path to the default and alt. configs on Windows and Mac.
* now works also with GCC 4.4 and Boost 1.35