@@ -17,7 +17,7 @@ const fp View::relative_y_margin = 1./20.;
 
 void View::set_datasets(vector<int> const& dd)
 {
-    datasets = dd;
+    datasets_ = dd;
 }
 
 
@@ -31,17 +31,17 @@ string View::str() const
 
 void View::fit_zoom(int flag)
 {
-    assert(!datasets.empty());
+    assert(!datasets_.empty());
 
     // For the first dataset in `dataset' (@n, it doesn't contain @*) both
     // data points and models are considered.
     // For the next ones only data points.
-    DataAndModel const* first = F->get_dm(datasets[0]);
+    DataAndModel const* first = F->get_dm(datasets_[0]);
     vector<Model const*> models(1, first->model());
-    vector<Data const*> datas(datasets.size());
+    vector<Data const*> datas(datasets_.size());
     datas[0] = first->data();
-    for (size_t i = 1; i < datasets.size(); ++i)
-        datas[i] = F->get_dm(datasets[i])->data();
+    for (size_t i = 1; i < datasets_.size(); ++i)
+        datas[i] = F->get_dm(datasets_[i])->data();
 
     if (flag&fit_left || flag&fit_right) {
         fp x_min=0, x_max=0;
@@ -50,7 +50,7 @@ void View::fit_zoom(int flag)
             x_min -= 0.1;
             x_max += 0.1;
         }
-        if (log_x) {
+        if (log_x_) {
             x_min = max(epsilon, x_min);
             x_max = max(epsilon, x_max);
             fp margin = log(x_max / x_min) * relative_x_margin;
@@ -75,7 +75,7 @@ void View::fit_zoom(int flag)
             y_min -= 0.1;
             y_max += 0.1;
         }
-        if (log_y) {
+        if (log_y_) {
             y_min = max(epsilon, y_min);
             y_max = max(epsilon, y_max);
             fp margin = log(y_max / y_min) * relative_y_margin;
@@ -164,7 +164,7 @@ void View::get_y_range(vector<Data const*> datas, vector<Model const*> models,
     }
 
     // include or not include zero
-    if (!log_y) {
+    if (!log_y_) {
         const fp show_zero_factor = 0.1;
         if (y_min > 0 && y_max - y_min > show_zero_factor * y_max)
             y_min = 0;
